# twat

./: .gitignore  Cargo.toml  bacon.toml
src/: main.rs
src/cat/: cat.rs  mod.rs
src/cli/: cli.rs  mod.rs
src/hash/: hash.rs  mod.rs
src/init/: init.rs  mod.rs
src/objects/: cat.rs  mod.rs  objects.rs
src/utils/: mod.rs  utils.rs
